<resources>
    <string name="app_name">CalculatorApp_Yashvee_Dec11</string>
    <string name="title">Assignment1 Calculator</string>
    <string name="initial_text">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_plus">+</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_minus">-</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_multiply">*</string>
    <string name="c">C</string>
    <string name="_0">0</string>
    <string name="equal">=</string>
    <string name="divide">/</string>
    <string name="historytext">ADVANCE - WITH HISTORY</string>
    <string name="historyTextAfterClick">STANDARD - NO HISTORY</string>
    <string name="historytextnextwindowbuttontext">HISTORY IN NEXT WINDOW</string>
    <string name="history">HISTORY</string>
</resources>