<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="@dimen/textsize"
        android:background="@color/orange"
        android:gravity="center"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        />

    <TextView
        android:id="@+id/calculate_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/initial_text"
        android:textSize="@dimen/textsize"
        android:gravity="center"
        android:layout_marginTop="@dimen/textsize"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/title"
        tools:ignore="LabelFor"
        />
    <LinearLayout
        android:id="@+id/first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/calculate_text"
        android:gravity="center"
        >
    <Button
        android:id="@+id/Button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:textSize="@dimen/buttonText"
        android:textColor="@color/black"
        android:text="@string/_1"

        />
    <Button
        android:id="@+id/Button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/buttonText"
        android:backgroundTint="@color/orange"
        android:textColor="@color/black"
        android:text="@string/_2"

        />
    <Button
        android:id="@+id/Button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/buttonText"
        android:backgroundTint="@color/orange"
        android:textColor="@color/black"
        android:text="@string/_3"

        />
    <Button
        android:id="@+id/Buttonplus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:textSize="@dimen/buttonText"
        android:textColor="@color/black"
        android:text="@string/_plus"

        />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/first"
        android:gravity="center"
        >
        <Button
            android:id="@+id/Button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:textSize="@dimen/buttonText"
            android:textColor="@color/black"
            android:text="@string/_4"

            />
        <Button
            android:id="@+id/Button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:textSize="@dimen/buttonText"
            android:textColor="@color/black"
            android:text="@string/_5"

            />
        <Button
            android:id="@+id/Button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:textSize="@dimen/buttonText"
            android:textColor="@color/black"
            android:text="@string/_6"

            />
        <Button
            android:id="@+id/Buttonminus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:textSize="@dimen/buttonText"
            android:textColor="@color/black"
            android:text="@string/_minus"

            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/third"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/second"
        android:gravity="center"
        >
        <Button
            android:id="@+id/Button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:textSize="@dimen/buttonText"
            android:textColor="@color/black"
            android:text="@string/_7"

            />
        <Button
            android:id="@+id/Button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:textSize="@dimen/buttonText"
            android:textColor="@color/black"
            android:text="@string/_8"

            />
        <Button
            android:id="@+id/Button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:textSize="@dimen/buttonText"
            android:textColor="@color/black"
            android:text="@string/_9"

            />
        <Button
            android:id="@+id/Buttonmultiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:textSize="@dimen/buttonText"
            android:textColor="@color/black"
            android:text="@string/_multiply"

            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/fourth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/third"
        android:gravity="center"
        >
        <Button
            android:id="@+id/ButtonC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:textSize="@dimen/buttonText"
            android:textColor="@color/black"
            android:text="@string/c"

            />
        <Button
            android:id="@+id/Button0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:textSize="@dimen/buttonText"
            android:textColor="@color/black"
            android:text="@string/_0"

            />
        <Button
            android:id="@+id/Buttonequal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:textSize="@dimen/buttonText"
            android:textColor="@color/black"
            android:text="@string/equal"

            />
        <Button
            android:id="@+id/Buttondivide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:textSize="@dimen/buttonText"
            android:textColor="@color/black"
            android:text="@string/divide"

            />
    </LinearLayout>
    <Button
        android:id="@+id/History"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple"
        android:textColor="@color/black"
        android:text="@string/historytext"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/buttonText"
        android:layout_below="@id/fourth"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:gravity="center"

        />
    <TextView
        android:id="@+id/HistoryTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="@dimen/buttonText"
        android:gravity="center"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/History"
        />



</RelativeLayout>